fix challenges http route
